--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							<img class="model animate-in" src="images/model4.png" alt="Model 4" />
 						</li>
 						<li id="creative">
-							<h2 class="title">JZ Travel Planner</h2>
+							<h2 class="title">JZ Hello Planner</h2>
 							<h3 class="subtitle">Create unique sliders using CSS3 transitions</h3>
 							<img class="model" src="images/model5.png" alt="Model 5" />
 						</li>
@@ -112,6 +112,10 @@
 				</ul>
 			</div>
 		</div>
-
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+			<a href="#" class="thumbnail">
+				<img data-src="#" alt="">
+			</a>
+		</div>
 	</body>
 </html>
