--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		
 		jQuery(document).ready(function(){
 			var options = {
-				autoPlay: true,
+				autoPlay: false,
 				nextButton: true,
 				prevButton: true,
 				animateStartingFrameIn: true,
