commit false to true in index.html

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		
 		jQuery(document).ready(function(){
 			var options = {
-				autoPlay: false,
-				nextButton: true,
-				prevButton: true,
-				animateStartingFrameIn: true,
+				autoPlay: true,
+				nextButton: false,
+				prevButton: false,
+				animateStartingFrameIn: false,
 				autoPlayDelay: 3000,
 				transitionThreshold: 500,
 				preloader: true,
