false to 1 in index.html

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		jQuery(document).ready(function(){
 			var options = {
 				autoPlay: false,
-				nextButton: true,
-				prevButton: true,
-				animateStartingFrameIn: true,
+				nextButton: 1,
+				prevButton: 1,
+				animateStartingFrameIn: 1,
 				autoPlayDelay: 3000,
 				transitionThreshold: 500,
 				preloader: true,
