--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 12313dasfasf
 
 <html>ddsfkdasfjasklj
+a
+a
+daskf
 <head>
 	<meta charset=utf-8 />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,8 +15,8 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="css/sequencejs-theme.modern-slide-in.css" />
 	<!--[if lt IE 9]><link rel="stylesheet" type="text/css" media="screen" href="css/sequencejs-theme.modern-slide-in.ie.css" /><![endif]-->
 
-	<script type="text/javascript">
-	if (typeof jQuery == 'undefined'){
+
+
 	    document.write(unescape("%3Cscript src='../../scripts/jquery.js' type='text/javascript'%3E%3C/script%3E"));
 	}
 	</script>
